# UFABC-Codigos

./: README.md
AlgoritmoEstruturaDeDados1/Algoritmos/: Arvore.c  BuscaBinaria.c  BuscaLinear.c  FilaCircular.c  FilaDinamicaV1.c  FilaToPilhaV1.c  ListaDinamicaDuplamenteEncadeada.c  ListaDinamicaEncadeada.c  ListaEstaticaSequencial.c  PilhaDinamica.c  PilhaEstatica.c  teste.txt
AlgoritmoEstruturaDeDados1/Desafios/: ArvoreBin11.c  CopaDoMundo.c  InsercaoArvoreSemRepeticao.c  ListaDinamicaDuplamenteEncadeada.c  ListaDinamicaDuplamenteEncadeadaV2.c  PilhaToFila.c  absolute.c  arvoreBin10.c  arvoreBin12.c  arvoreBin14.c  arvoreBin15.c  arvoreBin16.c  arvoreBin3.c  arvoreBin4.c  arvoreBin5.c  arvoreBin7.c  arvoreBin8.c  arvoreBinariaDeBusca.c  arvoreBinariaTeste.c  brasileirao.c  bubbleSort.c  bubbleString.c  caracteres.c  divReal.c  eco.c  imediatamente.c  invert.c  nada.c  nomicula.c  numeroInteiro.c  numerosReaisSimples1.c  pilhaInt.c  removerAntecessor.c  segundoMaior.c  soma3.c  soma5.c  soma7.c  teste.txt  testeout.txt  testeout1.txt
AlgoritmosEmGrafos/: BFS_MatrizDeDistancia.py  BuscaEmLargura.py  BuscaEmProdundidade.py  BuscaEmProfundidadeV2.py  DFS_FortementeConexos.py  DFS_Parentese.py  GrafoTransposto.py  Grafo_Ponderado.py  ListaAdjacencia.py
BCC-Python/ProjetoFinalBcc/: Bcc-DocumentaçãoProjeto.odt  ProjetoFinal_BCC.ipynb  projetofinal_bcc.py
NaturezaDaInformacao-Java/: ImagemInvertidaPMG.c  ImagemNegativoPGM.c  ImagemRotacionarVertical.c  imgPretoEBranco.c
NaturezaDaInformacao-Java/Imgs-utilizadas/: emotions-g967044596_640.pgm  monalisa.pgm
NaturezaDaInformacao-Java/JogoDaVida-Ni/: .project  build.xml
POO/Lab2/: README.md
POO/Lab3/: README.md
POO/Lab4 - Problema do Produtor Consumidor/: Consumidor.java  Produtor.java
ProcessamentoDaInformacao-Python/EP1_1 - Alo, mundo!/: untitled5.py
ProgramaçãoEstruturada/Lista1/: ex1.c  ex10.c  ex2.c  (+7 more)
ProgramaçãoFuncional/xadrez/: README.md  Tutorial  projeto-final.cabal
ProgramaçãoFuncional/xadrez/.stack-work/: stack.sqlite3
ProgramaçãoFuncional/xadrez/src/: Client.hs  Elementos.hs  Host.hs  HostIA.hs  IA.hs  Jogo.hs  JogoM.hs  JogoMIA.hs  Main.hs  Xadrez.hs
TesteTecnicoCertsign/: Program.cs  teste.sln
(+294 files in other folders)
