name:                projeto-final
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/projeto-final#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable local
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal
  other-modules:       Elementos
                     , Xadrez
                     , Jogo
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N

executable host
  hs-source-dirs:      src
  main-is:             Host.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network
                     , bytestring
                     , ansi-terminal
  other-modules:       Elementos
                     , Xadrez
                     , JogoM
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N

executable client
  hs-source-dirs:      src
  main-is:             Client.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network
                     , bytestring
                     , ansi-terminal
  other-modules:       Elementos
                     , Xadrez
                     , JogoM
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N

executable hostIA
  hs-source-dirs:      src
  main-is:             HostIA.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network
                     , bytestring
                     , ansi-terminal
                     , random
  other-modules:       Elementos
                     , Xadrez
                     , JogoMIA
                     , IA
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
